Fixed an issue with  excluded setter not beeing excluded in case of default constructor and hashCode/equals